# FruitShop

./: .gitignore  Dockerfile  docker-compose.yml  entrypoint.sh  manage.py  pyproject.toml
FruitShop/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
bank/: models.py  tasks.py  urls.py  views.py
bank/management/commands/: init_bank.py
bank/migrations/: 0001_initial.py  0002_declaration.py
fruits/: consumers.py  models.py  routing.py  tasks.py  urls.py  views.py
fruits/management/commands/: init_fruits.py  start_tasks.py
fruits/migrations/: 0001_initial.py  0002_alter_fruit_options.py  0003_fruit_last_transaction.py
nginx/: nginx.conf
templates/: main_page.html
users/: models.py  tasks.py  urls.py  views.py
users/management/commands/: init_users.py
users/migrations/: 0001_initial.py  0002_auto_20230517_1913.py  0003_alter_message_options.py
